[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/UI/HM-GUI-backer-001.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/HM-GUI-button-06-block001.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/UI/HM-GUI-button-01-clone001.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/UI/HM-GUI-button-02-clone002.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/UI/HM-GUI-button-03-clone003.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/UI/HM-GUI-button-04-clone004.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/UI/HM-GUI-button-05-clone005.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/UI/JOYSTIX.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Art/UI/HM-GUI-resource.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-008.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-011.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-013.png" type="Texture" id=13]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-004.png" type="Texture" id=14]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-007.png" type="Texture" id=15]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-012.png" type="Texture" id=16]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-001-full.png" type="Texture" id=17]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-003.png" type="Texture" id=18]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-014.png" type="Texture" id=19]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-002.png" type="Texture" id=20]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-010.png" type="Texture" id=21]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-006-half-full.png" type="Texture" id=22]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-009.png" type="Texture" id=23]
[ext_resource path="res://Assets/Art/UI/HM-GUI-heart-005.png" type="Texture" id=24]
[ext_resource path="res://Scripts/Heart.gd" type="Script" id=25]

[sub_resource type="DynamicFont" id=1]

size = 27
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "10",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "7",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "13",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "11",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": false,
"name": "12",
"speed": 1.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "8",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "9",
"speed": 5.0
} ]

[node name="HUD" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="PlayView" type="CollisionPolygon2D" parent="." index="0"]

visible = false
light_mask = 0
position = Vector2( -0.00244141, -0.00140381 )
scale = Vector2( 1, 1 )
build_mode = 0
polygon = PoolVector2Array( 0.0024414, 100.001, 930, 100.001, 930, 50.0012, 1280, 50.0012, 1280, 720, -0.00012207, 720 )
_sections_unfolded = [ "Visibility" ]

[node name="Top" type="Node2D" parent="." index="1"]

editor/display_folded = true
_sections_unfolded = [ "Visibility" ]

[node name="HM-GUI-backer-001" type="Sprite" parent="Top" index="0"]

position = Vector2( 640, 50 )
texture = ExtResource( 2 )

[node name="ButtonBlock" type="Button" parent="Top" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 370.0
margin_top = 10.0
margin_right = 457.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = false
align = 1

[node name="ButtonRed" type="Button" parent="Top" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_top = 10.0
margin_right = 547.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1

[node name="ButtonBlue" type="Button" parent="Top" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 550.0
margin_top = 10.0
margin_right = 637.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = false
align = 1

[node name="ButtonGreen" type="Button" parent="Top" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 10.0
margin_right = 727.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = false
align = 1

[node name="ButtonYellow" type="Button" parent="Top" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 730.0
margin_top = 10.0
margin_right = 817.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 7 )
flat = false
align = 1

[node name="ButtonPurple" type="Button" parent="Top" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 820.0
margin_top = 10.0
margin_right = 907.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 8 )
flat = false
align = 1

[node name="Label_Health" type="Label" parent="Top" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_right = 172.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Health:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Label_Resource" type="Label" parent="Top" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 940.0
margin_right = 1120.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Resource:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="IconResource" type="Sprite" parent="Top" index="9"]

position = Vector2( 1260, 20 )
texture = ExtResource( 10 )

[node name="Label_Amount" type="Label" parent="Top" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1120.0
margin_right = 1240.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Heart" type="AnimatedSprite" parent="." index="2"]

position = Vector2( 170, 20 )
frames = SubResource( 2 )
animation = "13"
script = ExtResource( 25 )
HP_range = null

[connection signal="mouse_entered" from="." to="." method="_on_HUD_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_HUD_mouse_exited"]

[connection signal="toggled" from="Top/ButtonBlock" to="." method="_on_ButtonBlock_toggled"]

[connection signal="toggled" from="Top/ButtonRed" to="." method="_on_ButtonRed_toggled"]

[connection signal="toggled" from="Top/ButtonBlue" to="." method="_on_ButtonBlue_toggled"]

[connection signal="toggled" from="Top/ButtonGreen" to="." method="_on_ButtonGreen_toggled"]

[connection signal="toggled" from="Top/ButtonYellow" to="." method="_on_ButtonYellow_toggled"]

[connection signal="toggled" from="Top/ButtonPurple" to="." method="_on_ButtonPurple_toggled"]


